# ChangeLog for dev-ruby/open4
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/open4/ChangeLog,v 1.18 2014/12/28 00:45:58 mrueg Exp $

  28 Dec 2014; Manuel Rüger <mrueg@gentoo.org> open4-1.3.3.ebuild:
  Add ruby2.2 target.

  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -open4-1.3.0-r1.ebuild,
  -open4-1.3.0-r2.ebuild, open4-1.3.3.ebuild:
  Remove ruby18 target. Cleanup old.

*open4-1.3.3 (05 Mar 2014)

  05 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +open4-1.3.3.ebuild:
  Version bump.

*open4-1.3.0-r2 (27 Dec 2013)

  27 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +open4-1.3.0-r2.ebuild:
  Add ruby21 target.

  02 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -open4-1.3.0.ebuild:
  Cleanup old.

*open4-1.3.0-r1 (04 Oct 2013)

  04 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +open4-1.3.0-r1.ebuild:
  Add ruby20 target.

  09 Sep 2012; Hans de Graaff <graaff@gentoo.org> -open4-1.0.1-r1.ebuild,
  -open4-1.1.0.ebuild, -open4-1.2.0.ebuild:
  Cleanup.

  11 Mar 2012; Brent Baude <ranger@gentoo.org> open4-1.3.0.ebuild:
  Marking open4-1.3.0 ~ppc64 for bug 388357

*open4-1.3.0 (20 Nov 2011)

  20 Nov 2011; Hans de Graaff <graaff@gentoo.org> +open4-1.3.0.ebuild:
  Version bump. Add ruby19.

*open4-1.2.0 (05 Oct 2011)

  05 Oct 2011; Hans de Graaff <graaff@gentoo.org> +open4-1.2.0.ebuild:
  Version bump.

  10 Sep 2011; Hans de Graaff <graaff@gentoo.org> open4-1.1.0.ebuild:
  Add ree18.

*open4-1.1.0 (24 Jun 2011)

  24 Jun 2011; Hans de Graaff <graaff@gentoo.org> +open4-1.1.0.ebuild:
  Version bump.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> -open4-0.9.6.ebuild,
  -open4-1.0.1.ebuild:
  Drop old ebuilds.

*open4-1.0.1-r1 (16 Jan 2010)

  16 Jan 2010; Hans de Graaff <graaff@gentoo.org> +open4-1.0.1-r1.ebuild:
  Convert to ruby-fakegem.

  09 Dec 2009; Hans de Graaff <graaff@gentoo.org> +open4-0.9.6.ebuild:
  Resurrect open4-0.9.6 because dev-ruby/vlad-2.0.0 still depends on this.
