@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST open4-1.3.3.gem 18944 SHA256 c1499107df3086a5d361fd5103d33468b9fa0fff794295142c6e70950554145e SHA512 e128043d53a4e47f60c21c1d827002f422a0bed102cfaeb716cf09a9d54970afc201c7457a241051557438a4ed16891431988f0b252d45dec50798be66f7e7a1 WHIRLPOOL 53ca88ba9d94a202e9a52c8a8b43061b2063ce1ff0d68a90f4552bc3431bbb4d7f2ad80d94ef22c72ad42f88c37606a8c1cf57af26eee8a16f9c8fc82dbc6f5a
+DIST open4-1.3.4.gem 18944 SHA256 a1df037310624ecc1ea1d81264b11c83e96d0c3c1c6043108d37d396dcd0f4b1 SHA512 838a18efcd093d55d9589ff9d5c11054618abef863224c2d9b31445dc735218c2f96d954040e2d3f8d5aab0140e54b627fcc4a1b01c17e59267402a2abdd8efb WHIRLPOOL 74d55311ecc0c973059cf7058d72a4b0d4c7e664bf9bfe0f825dbe7dac85f66272449ab18668089837a397c6162e10aa697feb605177d69b06fd75d281ea8a18
 EBUILD open4-1.3.3.ebuild 828 SHA256 ab0f0dacbb77cf0bf22e626af000a26f8e8ffa066376e5e24b7a814f2f302193 SHA512 2c73fb01e22bb1e6cc2e9280ab8de5e3c8b14a4c3a57c6bd2b512dc4dd8cbff5634c275a5f9c7c3bc9054f64f5af6bf6c1ca48a4462f5da7cabc1a1608581358 WHIRLPOOL 5c0df12a540279bf6eab6cca4759603949926b873892626ddd5bf7f5b4dd9e63e399af73d22757f151fef88332f149f838693abf728dd18af584ee33f467d636
-MISC ChangeLog 2329 SHA256 9e4c13c10e631c8170dc09022412a9c24b2c22117e5084ef8bdcd8542daa5738 SHA512 2e92e26f0bda582965583f654618cc501d28a3a406e2529d1dbf89228e801df4a68c7f7c7db2e465d4bd035b9110d1a1a362086e2d87c926fc5f4831ff2bb0e9 WHIRLPOOL 7875045525a1c16beb8b81df12bd54463fdf7b0c5e8eb4d81b7bfa4f8c650218e26b4668c08ee154f54bad4dbe4c87b0c5a3a71ca5449684f10f2bea6622c164
+EBUILD open4-1.3.4.ebuild 760 SHA256 e9d70c753d54ca326c9041f10e049d8c976de2464cf81fd3f651726550f6dbae SHA512 0588b9f92e8d9376855e8370d01bfd04f4c5b58801a60d6279bd05691eadb6a9aa0e28bdbaeaa9920ee7c1b937e6e61ff5c47f048de79fb849514f0616d477a9 WHIRLPOOL ddf3f467858fc67c08dd2f6aa31a1fda8e33ced3ef9c0efdf5041176a791d7218c27d0e85707865eeb23b564bdd6fef11739fcc1b06a46d007ba4fbfed89176e
+MISC ChangeLog 2446 SHA256 2f00ecdd24aa0c631056cbacbb328aca30c7e17ebf58a1f202861dd20058989d SHA512 d9dea70de9ee7645309a77930e3f0ac84c219a75b2655054def133358cba8fc1edbab8d00d576e6747672e12805c6433ccf5e71631ba8016fc44c8e0ebe7cf78 WHIRLPOOL 361d57815e8398e5490d1545cb262fc65703a1c9c50602a4d298c08956b122c914bc5f07e1b9234ec69ee19e145b9299cd1fceab20113f957ade6fc7c26bd1f8
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlU9yW4ACgkQiIP6VqMIqNcnfgEAi8rU0jJVv1RJKRjGJ+gYD3Xm
+MZ18t0G27XdYhfYLe4EA/ApUIqEZHqRdIUUpplHJWDaNu4TV+NVPOEf3YfVmidUs
+=yraa
+-----END PGP SIGNATURE-----
