@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/open4
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/open4/ChangeLog,v 1.18 2014/12/28 00:45:58 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/open4/ChangeLog,v 1.19 2015/04/27 05:30:11 graaff Exp $
+
+*open4-1.3.4 (27 Apr 2015)
+
+  27 Apr 2015; Hans de Graaff <graaff@gentoo.org> +open4-1.3.4.ebuild:
+  Version bump.
 
   28 Dec 2014; Manuel Rüger <mrueg@gentoo.org> open4-1.3.3.ebuild:
   Add ruby2.2 target.
